--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "description": "pengins. in ur xterm. chillin.",
   "version": "1.2.2",
   "author": {
-    "name": "Zac Anger",
-    "url": "https://zacanger.com"
+    "name": "Autumn Z"
   },
   "license": "WTFPL",
   "main": "index.js",
@@ -14,13 +13,13 @@
   "scripts": {
     "test": "node test.js"
   },
-  "homepage": "https://github.com/zacanger/pengins",
+  "homepage": "https://github.com/zautumnz/pengins",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zacanger/pengins.git"
+    "url": "https://github.com/zautumnz/pengins.git"
   },
   "bugs": {
-    "url": "https://github.com/zacanger/pengins/issues"
+    "url": "https://github.com/zautumnz/pengins/issues"
   },
   "keywords": [
     "art",
